# web_permonitor

./: .gitignore  CHANGELOG.md  CHANGES_REQUEST_DETAILS.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: python-publish.yml
.specify/memory/: constitution.md
examples/: fastapi_demo.py  flask_demo.py  sanic_demo.py
openspec/: project.md
openspec/changes/add-fastapi-support/: design.md  tasks.md
openspec/changes/add-sanic-support/: proposal.md  tasks.md
openspec/changes/add-sanic-support/specs/sanic-perf-monitor/: spec.md
openspec/changes/archive/2025-11-28-add-fastapi-support/: proposal.md
openspec/changes/archive/2025-11-28-add-fastapi-support/specs/fastapi-perf-monitor/: spec.md
openspec/changes/archive/2025-11-29-add-request-headers-to-reports/: proposal.md  tasks.md
openspec/changes/archive/2025-11-29-add-request-headers-to-reports/specs/performance-reporting/: spec.md
openspec/specs/fastapi-perf-monitor/: spec.md
openspec/specs/performance-reporting/: spec.md
specs/001-flask-perf-monitor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-flask-perf-monitor/checklists/: requirements.md
specs/001-flask-perf-monitor/contracts/: python-api.md
src/web_perf_monitor/: __init__.py  config.py  exceptions.py  executor.py  models.py  profiler.py
src/web_perf_monitor/core/: __init__.py  base_adapter.py  registry.py
src/web_perf_monitor/frameworks/: __init__.py
src/web_perf_monitor/frameworks/flask/: __init__.py  adapter.py  decorator.py  middleware.py
src/web_perf_monitor/notifiers/: __init__.py  base.py  email.py  local.py  mattermost.py
src/web_perfmonitor/: __init__.py  alert.py  config.py  exceptions.py  executor.py  filter.py  models.py  profiler.py
src/web_perfmonitor/core/: __init__.py  base_decorator.py  base_middleware.py
src/web_perfmonitor/frameworks/: __init__.py
src/web_perfmonitor/frameworks/fastapi/: __init__.py  adapter.py  decorator.py  middleware.py
src/web_perfmonitor/frameworks/flask/: __init__.py  adapter.py  decorator.py  middleware.py
src/web_perfmonitor/frameworks/sanic/: __init__.py  adapter.py  decorator.py  middleware.py
src/web_perfmonitor/notifiers/: __init__.py  base.py  mattermost.py
tests/integration/: test_fastapi_async.py  test_fastapi_integration.py
tests/unit/frameworks/: test_fastapi_adapter.py  test_fastapi_decorator.py  test_fastapi_middleware.py
